# opcodes-lab

./:  .clang-format-ignore   .gitignore  CMakeLists.txt  Readme.md
include/: aarch64-insn-bits.h  ansidecl.h  bfd.h  config.h  dis-asm.h  obstack.h
include/opcode/: aarch64.h  hppa.h  loongarch.h  sparc.h  tic6x.h
opcodes/: aarch64-dis-2.c  aarch64-dis.c  aarch64-gen.c  aarch64-opc-2.c  aarch64-opc.c  aarch64-opc.h  aarch64-tbl.h  arc-ext.h  arm-dis.c  bpf-asm.c  bpf-desc.c  cgen-asm.c  cgen-dis.c  cris-desc.c  disassemble.c  disassemble.h  epiphany-asm.c  epiphany-desc.c  fr30-asm.c  fr30-desc.c  frv-asm.c  frv-desc.c  i386-dis.c  i386-gen.c  ip2k-asm.c  ip2k-desc.c  iq2000-asm.c  iq2000-desc.c  lm32-asm.c  lm32-desc.c  loongarch-opc.c  m32c-asm.c  m32r-asm.c  m32r-desc.c  m68k-opc.c  mep-asm.c  mep-desc.c  mmix-dis.c  mt-asm.c  mt-desc.c  (+8 more)
tools/: CMakeLists.txt  aarch64-insn-dump.cpp
tools/dis/: CMakeLists.txt
tools/dump/: CMakeLists.txt  aarch64-insn-dump.cpp
